# MultiPlatformICCU4C

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  build.sh  clean.sh  common-source.sh  common.source  fix-newline.sh  full-build.sh  mac-build.sh  quick-build.sh  test.cpp  test32  versions.env
.github/workflows/: build-and-test.yml  release.yaml
artifacts/llvm-kit/: README.md  build-lib-from-llvm.sh
icu-dist/linux-x86_64/lib/icu/74.2/: Makefile.inc  pkgdata.inc
icu-dist/linux-x86_64/lib/pkgconfig/: icu-i18n.pc  icu-io.pc  icu-uc.pc
icu-dist/wasm32/lib/icu/74.2/: Makefile.inc  pkgdata.inc
icu-dist/wasm32/lib/pkgconfig/: icu-i18n.pc  icu-io.pc  icu-uc.pc
icu-dist/windows-x86_64/lib/icu/74.2/: Makefile.inc  pkgdata.inc
icu-dist/windows-x86_64/lib/pkgconfig/: icu-i18n.pc  icu-io.pc  icu-uc.pc
test/: CMakeLists.txt  Dockerfile.test  run-test-docker.sh  run-test.sh  test.cpp
test-linux-x86_64/: CMakeLists.txt  Dockerfile  run-test.sh  test.cpp
test/test-linux-x86_32/: CMakeLists.txt  Dockerfile  in-docker-run-test.sh  run-direct.sh  run.sh
test/test-linux-x86_64/: CMakeLists.txt  Dockerfile  in-docker-run-test.sh  run-test.sh  run.sh  test.cpp
test/test-wasm-32/: CMakeLists.txt  run.sh
test/test-wasm-64/: CMakeLists.txt  run.sh
test/test-windows-x64/: CMakeLists.txt  github-workflow.yml  run-test.ps1  run.bat
